# cpp_templates

./: .gitmodules  README.md  cppnew  cppnew.sh
GUI_wxWidgets/: conanfile.txt  main.cpp
REST_restinio/: CMakeLists.txt
SDL_wasm/: CMakeLists.txt  README.md  conanfile.txt  main.cpp
asio/: CMakeLists.txt  conanfile.txt  main.cpp
conan_hello_world/: conanfile.txt
ktx/: CMakeLists.txt  README.md  conanfile.txt  ktxTranscodeTest.cpp
lz4/: CMakeLists.txt  conanfile.txt  main.cpp
packio/: CMakeLists.txt  client.py  client_unix.py  conanfile.txt  server.cpp
precompiled_headers/: CMakeLists.txt  main2.cpp
project/: CMakeLists.txt  DESCRIPTION  conanfile.txt
project/src/: myfile.cpp
project/test/: unit-mylib.cpp
pybindTest/: .gitignore  CMakeLists.txt  conanfile.txt  main.cpp
remotery/: .gitignore  CMakeLists.txt  conanfile.txt  main.cpp
rpclib/: CMakeLists.txt  client.cpp  client.py  conanfile.txt  server.cpp
sdl/: .gitignore  DESCRIPTION
simple-websocket-server/: CMakeLists.txt  conanfile.txt  server.cpp
sodium/: CMakeLists.txt  conanfile.txt  main.cpp
sqlite/: BUILD  conanfile.txt
templates/GUI_wxWidgets/: CMakeLists.txt  DESCRIPTION
templates/REST_restinio/: DESCRIPTION  conanfile.txt  main.cpp
templates/conan_hello_world/: BUILD  CMakeLists.txt  main.cpp
templates/hello_world/: CMakeLists.txt
templates/project/: BUILD
templates/project/test/: CMakeLists.txt  unit-example.cpp
templates/pybindTest/: DESCRIPTION  myModule.py
templates/sdl/: BUILD  CMakeLists.txt  conanfile.txt  main.cpp
templates/sqlite/: CMakeLists.txt  DESCRIPTION  main.cpp
wasmtime-cpp/: CMakeLists.txt  conanfile.txt  wasmtime.cpp
